header corrected in-line with master pass

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,7 +29,9 @@
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
+
 <body class="sidebar-fixed topnav-fixed dashboard4">
+
 	<!-- WRAPPER -->
 	<div id="wrapper" class="wrapper">
 		<!-- TOP BAR -->
@@ -39,7 +41,7 @@
 					<a href="#" class="pull-left toggle-sidebar-collapse"><i class="fa fa-bars"></i></a>
 					<!-- logo -->
 					<div class="pull-left left logo">
-						<a href="index.html"><img src="assets/img/logo-white.png" alt="Social Budget" /></a>
+						<a href="index.html"><img src="assets/img/header-mpass-hero.svg" alt="Social Budget" style="max-width: 159px;    max-height: 43px;" /></a>
 						<h1 class="sr-only">Social Budget</h1>
 					</div>
 					<!-- end logo -->
