Added Donut char click events and table

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -320,6 +320,26 @@
 										</div>
 										<div class="widget-content">
 											<div class="demo-flot-donut-chart" id="demo-donut-chart-category"></div>
+											<div id="merchantTransactionTablediv" class="widget widget-table" hidden>
+												<div id="merchantTransactionWidgetHeader" class="widget-header">
+													<h3><i class="fa fa-arrow-left"></i></h3>  
+													<h3><i class="fa fa-table"></i>Transactions</h3>
+												</div>
+												<div class="widget-content">
+													<table id= "merchantTransactionTable" class="table table-condensed table-dark-header">
+													<thead>
+														<tr>
+															<th>Date</th>
+															<th>Description</th>
+															<th>Amount</th>
+														</tr>
+													</thead>
+													<tbody>
+											
+													</tbody>
+													</table>
+												</div>
+											</div>
 										</div>
 									</div>
 									<!-- END WIDGET DONUT AND PIE CHART -->
@@ -484,27 +504,27 @@
 	<!-- END WRAPPER -->
 	
 	<!-- Javascript -->
+	 <script type="text/javascript" src="assets/js/input.json"></script>
 	<script src="assets/js/jquery/jquery-2.1.0.min.js"></script>
 	<script src="assets/js/bootstrap/bootstrap.js"></script>
 	<script src="assets/js/plugins/modernizr/modernizr.js"></script>
 	<script src="assets/js/plugins/bootstrap-tour/bootstrap-tour.custom.js"></script>
 	<script src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="assets/js/king-common.js"></script>
-	<script src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-	<script src="assets/js/plugins/stat/flot/jquery.flot.min.js"></script>
-	<script src="assets/js/plugins/stat/flot/jquery.flot.pie.min.js"></script>
-	<script src="assets/js/king-chart-stat.js"></script>
-	
+	<script src="demo-style-switcher/assets/js/deliswitch.js"></script>
 	<script src="assets/js/plugins/stat/jquery.easypiechart.min.js"></script>
 	<script src="assets/js/plugins/raphael/raphael-2.1.0.min.js"></script>
+	<script src="assets/js/plugins/stat/flot/jquery.flot.min.js"></script>
 	<script src="assets/js/plugins/stat/flot/jquery.flot.resize.min.js"></script>
 	<script src="assets/js/plugins/stat/flot/jquery.flot.time.min.js"></script>
+	<script src="assets/js/plugins/stat/flot/jquery.flot.pie.min.js"></script>
 	<script src="assets/js/plugins/stat/flot/jquery.flot.tooltip.min.js"></script>
 	<script src="assets/js/plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
 	<script src="assets/js/plugins/datatable/jquery.dataTables.min.js"></script>
 	<script src="assets/js/plugins/datatable/dataTables.bootstrap.js"></script>
 	<script src="assets/js/plugins/jquery-mapael/jquery.mapael.js"></script>
 	<script src="assets/js/plugins/raphael/maps/usa_states.js"></script>
+	<script src="assets/js/king-chart-stat.js"></script>
 	<script src="assets/js/king-table.js"></script>
 	<script src="assets/js/king-components.js"></script>
 	
