--- a/WebContent/page-invoice.html
+++ b/WebContent/page-invoice.html
@@ -5,25 +5,31 @@
 <!--<![endif]-->
 
 <head>
-	<title>Invoice | Some Masterpass enabled company!</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="description" content="KingAdmin - Bootstrap Admin Dashboard Theme">
-	<meta name="author" content="The Develovers">
-	<!-- CSS -->
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="assets/css/skins/transparent.css" type="text/css">
-	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
-	
-	<!--[if lte IE 9]>
+<title>Invoice | Some Masterpass enabled company!</title>
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="description"
+	content="KingAdmin - Bootstrap Admin Dashboard Theme">
+<meta name="author" content="The Develovers">
+<!-- CSS -->
+<link href="assets/css/bootstrap.min.css" rel="stylesheet"
+	type="text/css">
+<link href="assets/css/font-awesome.min.css" rel="stylesheet"
+	type="text/css">
+<link href="assets/css/main.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="assets/css/skins/transparent.css"
+	type="text/css">
+<link href="assets/css/my-custom-styles.css" rel="stylesheet"
+	type="text/css">
+
+<!--[if lte IE 9]>
 		<link href="assets/css/main-ie.css" rel="stylesheet" type="text/css"/>
 		<link href="assets/css/main-ie-part2.css" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
 <body class="sidebar-fixed topnav-fixed ">
@@ -31,92 +37,42 @@
 	<div id="wrapper" class="wrapper">
 		<!-- TOP BAR -->
 		<div class="top-bar navbar-fixed-top">
-			<div class="container">
-			</div>
+			<div class="container"></div>
 			<!-- /container -->
 		</div>
 		<!-- END TOP BAR -->
-		<!-- LEFT SIDEBAR -->
-		<div id="left-sidebar" class="left-sidebar ">
-			
-		</div>
-		<!-- END LEFT SIDEBAR -->
+
 		<!-- MAIN CONTENT WRAPPER -->
-		<div id="main-content-wrapper" class="content-wrapper ">
-			<!-- top general alert -->
-			<div class="alert alert-danger top-general-alert">
-				<span>If you <strong>can't see the logo</strong> on the top left, please reset the style on right style switcher (for upgraded theme only).</span>
-				<button type="button" class="close">&times;</button>
-			</div>
-			<!-- end top general alert -->
-			<div class="row">
-				<div class="col-lg-4 ">
-					<ul class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="#">Home</a></li>
-						<li><a href="#">Pages</a></li>
-						<li class="active">Invoice</li>
-					</ul>
-				</div>
-			</div>
+		<div id="main-content-wrapper" class="content-wrapper1">
+
 			<!-- main -->
 			<div class="content">
 				<div class="main-header">
-					<h2>Invoice</h2>
-					<em>printer friendly invoice, try to print it to see the result</em>
+					<h2>Shopping Cart</h2>
+					<em>printer friendly invoice, try to print it to see the
+						result</em>
 				</div>
-				<div class="main-content">
+				<div class="col-md-1"></div>
+				<div class="main-content col-md-10">
 					<!-- INVOICE -->
 					<div class="invoice">
 						<!-- invoice header -->
 						<div class="invoice-header">
 							<div class="row">
 								<div class="col-lg-3 col-print-3">
-									<img src="assets/img/target-logo.png" alt="KingAdmin Logo" />
+									<img src="assets/img/target-logo.png" alt="Logo" />
 								</div>
 								<div class="col-lg-9 col-print-9">
 									<ul class="list-inline">
-										<li>Invoice #: <strong>15240776</strong></li>
-										<li>Invoice Date: <strong>Sept 22, 2016</strong></li>
-										<li>Total Amount: <strong>$12,221</strong></li>
+										<li>Billing Date: <strong>Sept 22, 2016</strong></li>
+										<li>Total Amount: <strong>$248.66</strong></li>
 									</ul>
 								</div>
 							</div>
 						</div>
 						<!-- end invoice header -->
 						<!-- invoice address -->
-						<div class="invoice-from-to">
-							<div class="row">
-								<div class="col-sm-6 col-print-6">
-									<span>FROM</span>
-									<p class="name">Target Inc.,</p>
-									<address>
-										12345 North Main Street
-										<br /> New York, 2233845
-										<br />
-										<div class="contact">
-											<p><span>Email:</span> email@example.com</p>
-											<p><span>Phone:</span> (1800) 765 - 4321</p>
-											<p><span>Fax:</span> (1800) 765 - 4322</p>
-										</div>
-									</address>
-								</div>
-								<div class="col-sm-6 col-print-6">
-									<span>TO</span>
-									<p class="name">Name Xyz.</p>
-									<address>
-										28435 East Main Street
-										<br /> New York, 2233845
-										<br />
-										<div class="contact">
-											<p><span>Email:</span> email@example.com</p>
-											<p><span>Phone:</span> (1800) 888 - 4321</p>
-											<p><span>Fax:</span> (1800) 888 - 4322</p>
-										</div>
-									</address>
-								</div>
-							</div>
-						</div>
-						<!-- end invoice address -->
+
 						<!-- invoice item table -->
 						<div class="table-responsive">
 							<table class="table invoice-table">
@@ -132,31 +88,31 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td>LED Monitor 23"</td>
-										<td>4</td>
-										<td>$250</td>
-										<td>$10,000</td>
+										<td>Quisp Crunchy Corn Cereal, 8.5 oz, (Pack of 6)</td>
+										<td>2</td>
+										<td>$60.27</td>
+										<td>$120.54</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td>Wireless Keyboard</td>
-										<td>8</td>
-										<td>$80</td>
-										<td>$640</td>
+										<td>Ensure Plus Nutrition Shake, Rich Dark Chocolate, 8 fl oz</td>
+										<td>1</td>
+										<td>$48.82</td>
+										<td>$48.82</td>
 									</tr>
 									<tr>
 										<td>3</td>
-										<td>Wireless Mouse</td>
-										<td>8</td>
-										<td>$40</td>
-										<td>$320</td>
+										<td>Filippo Berio Extra Virgin Olive Oil, 101 oz</td>
+										<td>1</td>
+										<td>$26.80</td>
+										<td>$26.80</td>
 									</tr>
 									<tr>
 										<td>4</td>
-										<td>UPS</td>
-										<td>1</td>
-										<td>$150</td>
-										<td>$150</td>
+										<td>Nature Valley® Peanut Butter Dark Chocolate Protein Chewy Bars</td>
+										<td>5</td>
+										<td>$5.98</td>
+										<td>$29.90</td>
 									</tr>
 								</tbody>
 							</table>
@@ -165,18 +121,20 @@
 						<!-- invoice footer -->
 						<div class="invoice-footer">
 							<div class="row">
-								<div class="col-sm-5 col-sm-offset-1 col-print-4 col-print-offset-2 right-col">
+								<div
+									class="col-sm-5 col-sm-offset-1 col-print-4 col-print-offset-2 right-col">
 									<div class="invoice-total">
 										<div class="row">
-											<div class="col-xs-4 col-xs-offset-4 col-print-6 col-print-offset-2">
+											<div
+												class="col-xs-4 col-xs-offset-4 col-print-6 col-print-offset-2">
 												<p>Subtotal</p>
 												<p>VAT (10%)</p>
 												<p>Total</p>
 											</div>
 											<div class="col-xs-4 text-right col-print-4">
-												<p>$11,110</p>
-												<p>$1,111</p>
-												<p>$12,221</p>
+												<p>$226.06</p>
+												<p>$22.60</p>
+												<p>$248.66</p>
 											</div>
 										</div>
 									</div>
@@ -184,7 +142,9 @@
 								<div class="col-sm-6 col-print-6 left-col">
 									<blockquote class="invoice-notes">
 										<strong>Notes:</strong>
-										<p>Competently brand interactive expertise and interactive solutions. Proactively orchestrate viral innovation vis-a-vis customized leadership.</p>
+										<p>Competently brand interactive expertise and interactive
+											solutions. Proactively orchestrate viral innovation vis-a-vis
+											customized leadership.</p>
 									</blockquote>
 								</div>
 							</div>
@@ -192,8 +152,11 @@
 						<!-- end invoice footer -->
 						<!-- invoice action buttons -->
 						<div class="invoice-buttons">
-							<button class="btn btn-default print-btn"><i class="fa fa-print"></i> Print</button>
-							<a href="#" class="btn btn-custom-primary"><i class="fa fa-arrow-right"></i> Proceed to Payment</a>
+							<div>
+								<label> <strong>Checkout (4 items) <strong></label> <a href="page-summary.html" class="btn"> <img
+									src="assets/img/mcpp_wllt_btn.png" alt="Checkout" />
+								</a>
+							</div>
 						</div>
 						<!-- end invoice action buttons -->
 					</div>
@@ -201,22 +164,18 @@
 				</div>
 			</div>
 			<!-- /main -->
-			<!-- FOOTER -->
-			<footer class="footer">
-				&copy; Tech Initiative 2016!
-			</footer>
-			<!-- END FOOTER -->
+
 		</div>
-		<!-- END CONTENT WRAPPER -->
 	</div>
 	<!-- END WRAPPER -->
-	
+
 	<!-- Javascript -->
 	<script src="assets/js/jquery/jquery-2.1.0.min.js"></script>
 	<script src="assets/js/bootstrap/bootstrap.js"></script>
 	<script src="assets/js/plugins/modernizr/modernizr.js"></script>
 	<script src="assets/js/plugins/bootstrap-tour/bootstrap-tour.custom.js"></script>
-	<script src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+	<script
+		src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="assets/js/king-common.js"></script>
 	<script src="demo-style-switcher/assets/js/deliswitch.js"></script>
 	<script src="assets/js/king-page.js"></script>
