--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 </head>
 
 
-<body class="sidebar-fixed topnav-fixed general-ui-elements">
+<body class="sidebar-fixed topnav-fixed general-ui-elements forms-elements forms-inplace-editing">
 
 	<!-- WRAPPER -->
 	<div id="wrapper" class="wrapper">
@@ -285,6 +285,11 @@
 										<li><a href="#quarter">Quarterly</a></li>
 										<li><a href="#half">Half Yearly</a></li>
 										<li><a href="#year">Annually</a></li>
+										<li class="active"><a href="#city">City</a></li>
+										<li><a href="#county">County</a></li>
+										<li><a href="#state">State</a></li>
+										<li><a href="#country">Country</a></li>
+										<li><a href="#category"><b>Category</b></a></li>
 									</ul>
 								</div>
 								<!-- end chart tab nav -->
@@ -371,7 +376,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-4">
 							<!-- WIDGET TASKS -->
 							<div id="widget-progress-bar" class="widget widget-scrolling">
 								<div class="widget-header">
@@ -420,12 +425,12 @@
 											</div>
 										</li>
 									</ul>
-									<button type="button" class="btn btn-primary center-block">View All Budgets</button>
+									<button type="button" class="btn btn-primary center-block">Manage Budgets</button>
 								</div>
 							</div>
 							<!-- END WIDGET TASKS -->
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-4">
 							<!-- WIDGET ACTIVITY FEED -->
 							<div class="widget widget-scrolling">
 								<div class="widget-header">
@@ -472,6 +477,67 @@
 							</div>
 							<!-- END WIDGET ACTIVITY FEED -->
 						</div>
+						<div class="col-md-4">
+							<!-- WIDGET TASKS -->
+							<div class="widget">
+								<div class="widget-header">
+									<h3><i class="fa fa-edit"></i> My Wish Lists</h3>
+									<div class="btn-group widget-header-toolbar">
+										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
+										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
+										<a href="index.html" title="Remove" class="btn-borderless btn-remove"><i class="fa fa-times"></i></a>
+									</div>
+								</div>
+								<div class="widget-content">
+									<form class="form-horizontal form-ticket" role="form">
+										<table id="user" class="table table-bordered table-striped">
+											<thead>
+												<tr>
+													<th>Category</th>
+													<th>keyword/Item</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Select2 (tags mode)</td>
+													<td><a href="#" id="tags" data-type="select2" data-pk="1" data-title="Enter tags">html, javascript</a></td>
+												</tr>
+												<tr>
+													<td>Select2 (dropdown mode)</td>
+													<td>
+														<a href="#" id="country" data-type="select2" data-pk="1" data-value="BS" data-title="Select country"></a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+										<hr class="inner-separator" />
+										<fieldset>
+											<div class="form-group">
+												<label for="ticket-type" class="col-sm-3 control-label">Category</label>
+												<div class="col-sm-9">
+													<select id="multiselect4-filter" name="multiselect4[]" class="multiselect" multiple="multiple">
+														<option value="apparel">APPAREL</option>
+														<option value="restaurant">RESTAURANT</option>
+														<option value="auto">AUTO</option>
+														<option value="grocery">GROCERY</option>
+														<option value="gas">GAS</option>
+													</select>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="ticket-name" class="col-sm-3 control-label">Keyword/Item Name</label>
+												<div class="col-sm-9">
+													<input type="text" value="Tabla Flavour" data-role="tagsinput">
+												</div>
+											</div>
+										</fieldset>
+										<hr class="inner-separator" />
+										<button type="button" class="btn btn-primary center-block">Set wish lists</button>
+									</form>
+								</div>
+							</div>
+							<!-- END WIDGET TASKS -->
+						</div>
 					</div>
 					
 				</div>
@@ -516,7 +582,27 @@
     <!-- Custom Theme Scripts -->
     <script src="assets/js/custom.min.js"></script>
 	<script src="assets/js/plugins/bootstrap-progressbar/bootstrap-progressbar.js"></script>
+	<script src="assets/js/plugins/bootstrap-switch/bootstrap-switch.min.js"></script>
+	<script src="assets/js/plugins/jquery-maskedinput/jquery.masked-input.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-multiselect/bootstrap-multiselect.js"></script>
+	<script src="assets/js/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
+	<script src="assets/js/plugins/jqallrangesliders/jqallrangesliders.js"></script>
+	<script src="assets/js/plugins/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
+	<script src="assets/js/plugins/jquery-simplecolorpicker/jquery.simplecolorpicker.js"></script>
+	<script src="assets/js/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
+	<script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+	<script src="assets/js/plugins/daterangepicker/daterangepicker.js"></script>
+	<script src="assets/js/plugins/moment/moment.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-slider/bootstrap-slider.js"></script>
+	<script src="assets/js/plugins/select2/select2.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
 	<script src="assets/js/king-elements.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/address.custom.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/demo-mock.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/bootstrap-editable.min.js"></script>
+	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
+	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
 </body>
 
 </html>
