Added More button and Fix for social and Personal chart issue

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -329,6 +329,7 @@
 												
 														</tbody>
 													</table>
+													<div class="chart-nav" align="right"><ul id="sales-stat-tab" ><li class="active"><a href="#month">more</a></li></ul></div>
 												</div>
 											</div>
 										</div>
