Fix for Pie char Header Changes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -306,8 +306,8 @@
 								<div class="col-md-12">
 									<!-- WIDGET DONUT AND PIE CHART -->
 									<div class="widget">
-										<div class="widget-header">
-											<h3><i class="fa fa-truck"></i> Top Categories</h3> <em>- based on Spent</em>
+										<div class="widget-header" id="categoryHeader">
+											<h3><i class="fa fa-truck"></i>My Top Categories</h3> <em>- based on Spent</em>
 										</div>
 										<div class="widget-content">
 											<div class="demo-flot-chart" id="demo-donut-chart-category"></div>
@@ -329,7 +329,7 @@
 												
 														</tbody>
 													</table>
-													<div class="chart-nav" align="right"><ul id="sales-stat-tab" ><li class="active"><a href="#month">more</a></li></ul></div>
+													<div class="chart-nav" align="right"><ul id="sales-stat-tab" ><li class="active"><a href="#month">compare</a></li></ul></div>
 												</div>
 											</div>
 										</div>
@@ -341,8 +341,8 @@
 								<div class="col-md-12">
 									<!-- WIDGET DONUT AND PIE CHART -->
 									<div class="widget">
-										<div class="widget-header">
-											<h3><i class="fa fa-truck"></i> Top Merchant</h3> <em>- based on Spent</em>
+										<div class="widget-header" id="merchantHeader">
+											<h3><i class="fa fa-truck"></i>My Top Merchant</h3> <em>- based on Spent</em>
 										</div>
 										<div class="widget-content">
 											<div class="demo-flot-chart" id="demo-donut-chart-merchant"></div>
