Login page resize

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -34,16 +34,19 @@
 </head>
 
 <body>
+
+	<div class="clearfix">
+		<!-- logo -->
+		<div class="pull-left left logo">
+			<a href="index.html"><img src="assets/img/header-mpass-hero.svg"
+				alt="Social Budget" style="max-width: 159px; max-height: 43px;" /></a>
+			<h1 class="sr-only">Lasso</h1>
+		</div>
+		<!-- end logo -->
+	</div>
 	<div class="wrapper full-page-wrapper page-auth page-login text-center">
 		<div class="container">
-			<div class="clearfix">
-				<!-- logo -->
-					<div class="pull-left left logo">
-						<a href="index.html"><img src="assets/img/header-mpass-hero.svg" alt="Social Budget" style="max-width: 159px;    max-height: 43px;" /></a>
-						<h1 class="sr-only">Social Budget</h1>
-					</div>
-					<!-- end logo -->
-			</div>
+
 
 			<div class="inner-page">
 				<div class="login-box center-block">
