manage budget link enabled

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -423,7 +423,7 @@
 											</div>
 										</li>
 									</ul>
-									<button type="button" class="btn btn-primary center-block">Manage Budgets</button>
+									<button type="submit" class="btn btn-primary center-block" onclick="location.href='settings.html';">Manage Budgets</button>
 								</div>
 							</div>
 							<!-- END WIDGET TASKS -->
