--- a/WebContent/settings.html
+++ b/WebContent/settings.html
@@ -311,32 +311,30 @@
 											<div id="editable-slider-grocery" class="editable-slider slider-warning"></div>
 										</li>
 										<li>
-											<p>GAS <span class="label label-text">$40 off $70</span></p>
+											<p>ACCESSORIES <span class="label label-text">$100 off $300</span></p>
 											<div id="editable-slider-gas" class="editable-slider slider-success"></div>
 										</li>
+										<li>
+											<p>AIRTRAVEL <span class="label label-text">$600 off $700</span></p>
+											<div id="editable-slider-gas" class="editable-slider slider-warning"></div>
+										</li>
+										<li>
+											<p>HOTEL <span class="label label-text">$50 off $200</span></p>
+											<div id="editable-slider-gas" class="editable-slider slider-success"></div>
+										</li>
+										<li>
+											<p>HOMESERVICES <span class="label label-text">$160 off $200</span></p>
+											<div id="editable-slider-gas" class="editable-slider slider-warning"></div>
+										</li>
+										<li>
+											<p>SPORTS <span class="label label-text">$90 off $100</span></p>
+											<div id="editable-slider-gas" class="editable-slider slider-danger"></div>
+										</li>
 									</ul>
-									<button type="button" class="btn btn-primary center-block">Save Budgets</button>
+									<button type="button" class="btn btn-primary center-block" onclick="location.href='index.html';">Save Budgets</button>
 								</div>
 							</div>
 							<!-- END WIDGET TASKS -->
-						</div>
-					</div>
-					<div class="row">
-						<div class="widget widget-table">
-							<div class="widget-header">
-								<h3><i class="fa fa-table"></i> Editable Table</h3> <em> - <a href="http://www.trirand.com/blog/" target="_blank">jqGrid</a> with editable row, navigation, add, delete, view, search and reload</em>
-							</div>
-							<div class="widget-content">
-								<div id="jqgrid-wrapper">
-									<table id="jqgrid" class="table table-striped table-hover">
-										<tr>
-											<td><p>APPAREL<span class="label label-text">$50 of $200</span></p>
-											<div id="editable-slider-apparel" class="editable-slider slider-success"></div></td>
-										</tr>
-									</table>
-									<div id="jqgrid-pager"></div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
