--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -31,19 +31,13 @@
 <link rel="apple-touch-icon-precomposed" sizes="57x57"
 	href="assets/ico/kingadmin-favicon57x57.png">
 <link rel="shortcut icon" href="assets/ico/favicon.png">
+<header>
+  <img src="assets/img/masterpass-header.png" />
+</header>
 </head>
 
 <body>
 
-	<div class="clearfix">
-		<!-- logo -->
-		<div class="pull-left left logo">
-			<a href="index.html"><img src="assets/img/header-mpass-hero.svg"
-				alt="Social Budget" style="max-width: 159px; max-height: 43px;" /></a>
-			<h1 class="sr-only">Lasso</h1>
-		</div>
-		<!-- end logo -->
-	</div>
 	<div class="wrapper full-page-wrapper page-auth page-login text-center">
 		<div class="container">
 
@@ -65,13 +59,13 @@
 							</div>
 						</div>
 						<div class="col-md-7">
-							<form class="form-horizontal" role="form">
+							<form class="form-horizontal" role="form" style="padding:25px;">
 
 								<div class="form-group">
 									<label for="username" class="control-label sr-only">Email
 										or Mobile number</label>
 									<div class="col-sm-12">
-										<div class="input-group">
+										<div class="input-group" style="width:100%;">
 											<input type="text" placeholder="Email or Mobile Number"
 												id="username" class="form-control" />
 										</div>
@@ -82,9 +76,9 @@
 									<label for="username" class="control-label sr-only">Card
 										number</label>
 									<div class="col-sm-12">
-										<div class="input-group">
+										<div class="input-group" style="width:100%;">
 											<input type="text" placeholder="Card Number" id="cardnumber"
-												value="5506900140100305" class="form-control"> <span
+												value="" class="form-control"> <span
 												class="svg-acceptance-mark svg-sprite-accepted-card-diners"></span>
 
 										</div>
@@ -96,13 +90,13 @@
 										<div class="input-group">
 											<label class="control-label">Expiration</label> <input
 												type="text" placeholder="MM/YY" id="expiration"
-												value="23/2050" class="form-control">
+												value="" class="form-control">
 										</div>
 									</div>
 									<div class="col-sm-6">
 										<div class="input-group">
 											<label class="control-label">Security Code</label> <input
-												type="password" placeholder="CVC" id="ccv" value="345"
+												type="password" placeholder="CVC" id="ccv" value=""
 												class="form-control">
 										</div>
 									</div>
