Recommendations & Budget Settings

--- a/WebContent/settings.html
+++ b/WebContent/settings.html
@@ -312,23 +312,23 @@
 										</li>
 										<li>
 											<p>ACCESSORIES <span class="label label-text">$100 off $300</span></p>
-											<div id="editable-slider-gas" class="editable-slider slider-success"></div>
+											<div id="editable-slider-accessories" class="editable-slider slider-success"></div>
 										</li>
 										<li>
 											<p>AIRTRAVEL <span class="label label-text">$600 off $700</span></p>
-											<div id="editable-slider-gas" class="editable-slider slider-warning"></div>
+											<div id="editable-slider-airtravel" class="editable-slider slider-warning"></div>
 										</li>
 										<li>
 											<p>HOTEL <span class="label label-text">$50 off $200</span></p>
-											<div id="editable-slider-gas" class="editable-slider slider-success"></div>
+											<div id="editable-slider-hotel" class="editable-slider slider-success"></div>
 										</li>
 										<li>
 											<p>HOMESERVICES <span class="label label-text">$160 off $200</span></p>
-											<div id="editable-slider-gas" class="editable-slider slider-warning"></div>
+											<div id="editable-slider-homeservices" class="editable-slider slider-warning"></div>
 										</li>
 										<li>
 											<p>SPORTS <span class="label label-text">$90 off $100</span></p>
-											<div id="editable-slider-gas" class="editable-slider slider-danger"></div>
+											<div id="editable-slider-sports" class="editable-slider slider-danger"></div>
 										</li>
 									</ul>
 									<button type="button" class="btn btn-primary center-block" onclick="location.href='index.html';">Save Budgets</button>
