--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -430,9 +430,9 @@
 						</div>
 						<div class="col-md-4">
 							<!-- WIDGET ACTIVITY FEED -->
-							<div class="widget widget-scrolling">
+							<div class="widget widget-scrolling panel-group" id="accordion2">
 								<div class="widget-header">
-									<h3><i class="fa fa-fire"></i> Activity Feed</h3>
+									<h3><i class="fa fa-fire"></i> Recommendations</h3>
 									<div class="btn-group widget-header-toolbar">
 										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
 										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
@@ -440,37 +440,68 @@
 									</div>
 								</div>
 								<div class="widget-content">
-									<ul class="list-unstyled activity-list">
-										<li>
-											<i class="fa fa-check activity-icon pull-left icon-success"></i>
-											<p>All project tasks are on schedule <span class="timestamp">2 minutes ago</span></p>
-										</li>
-										<li>
-											<i class="fa fa-check-circle activity-icon pull-left icon-success"></i>
-											<p>The system is running well, no error found. <span class="timestamp">4 minutes ago</span></p>
-										</li>
-										<li>
-											<i class="fa fa-unlock activity-icon pull-left icon-danger"></i>
-											<p>You have unsecure file permission on this project. Go to <a href="">File Manager</a> to fix it <span class="timestamp">15 minutes ago</span></p>
-										</li>
-										<li>
-											<i class="fa fa-bug activity-icon pull-left icon-info"></i>
-											<p>New <a href="#">bug report</a> has been submitted <span class="timestamp">1 hour ago</span></p>
-										</li>
-										<li>
-											<i class="fa fa-close activity-icon pull-left icon-danger"></i>
-											<p>Background job <a href="#">#783458</a> has failed. See the <a href="#">logs</a> <span class="timestamp">3 hour ago</span></p>
-										</li>
-										<li>
-											<i class="fa fa-flag activity-icon pull-left icon-success"></i>
-											<p>Project <a href="#">Social Boost</a> has been flagged as finished <span class="timestamp">Yesterday</span></p>
-										</li>
-										<li>
-											<i class="fa fa-print activity-icon pull-left icon-warning"></i>
-											<p>You have <a href="#">pending documents</a> on the printer server <span class="timestamp">Yesterday</span></p>
-										</li>
-									</ul>
-									<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+									<div class="panel panel-default">
+										<div class="panel-heading">
+											<h4 class="panel-title">
+												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> Wish List Suggestion</a>
+											</h4>
+										</div>
+										<div id="collapseOne2" class="panel-collapse collapse in">
+											<div class="panel-body">
+												<ul class="list-unstyled activity-list">
+													<li>
+														<i class="fa fa-check activity-icon pull-left icon-success"></i>
+														<p>Samaung 65 inch 4k UHD <span class="timestamp">Costco</span></p>
+													</li>
+													<li>
+														<i class="fa fa-check activity-icon pull-left icon-success"></i>
+														<p>Sony Play Station 3 <span class="timestamp">Best Buy</span></p>
+													</li>
+												</ul>
+												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+											</div>
+										</div>
+									</div>
+									<div class="panel panel-default">
+										<div class="panel-heading">
+											<h4 class="panel-title">
+												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> Customer Suggestions </a>
+											</h4>
+										</div>
+										<div id="collapseTwo2" class="panel-collapse collapse in">
+											<div class="panel-body">
+												<ul class="list-unstyled activity-list">
+													<li>
+														<i class="fa fa-check activity-icon pull-left icon-success"></i>
+														<p>5 customers are recommending Singapore Airlines <span class="timestamp">2 minutes ago</span></p>
+													</li>
+													<li>
+														<i class="fa fa-check activity-icon pull-left icon-success"></i>
+														<p>10 Customers are recommending Red Hot Chilli Pepper <span class="timestamp">4 minutes ago</span></p>
+													</li>
+												</ul>
+												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+											</div>
+										</div>
+									</div>
+									<div class="panel panel-default">
+										<div class="panel-heading">
+											<h4 class="panel-title">
+												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> General Suggestions</a>
+											</h4>
+										</div>
+										<div id="collapseThree2" class="panel-collapse collapse in">
+											<div class="panel-body">
+												<ul class="list-unstyled activity-list">
+													<li>
+														<i class="fa fa-check activity-icon pull-left icon-success"></i>
+														<p>This is the time to upgrade to your shoes, as your last shoes purchase was two years back.<span class="timestamp">Sport's Authority</span></p>
+													</li>
+												</ul>
+												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<!-- END WIDGET ACTIVITY FEED -->
