Link and Tab issue fix

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,6 @@
 		<div class="top-bar navbar-fixed-top">
 			<div class="container">
 				<div class="clearfix">
-					<a href="#" class="pull-left toggle-sidebar-collapse"><i class="fa fa-bars"></i></a>
 					<!-- logo -->
 					<div class="pull-left left logo">
 						<a href="index.html"><img src="assets/img/header-mpass-hero.svg" alt="Social Budget" style="max-width: 159px;    max-height: 43px;" /></a>
@@ -329,7 +328,7 @@
 												
 														</tbody>
 													</table>
-													<div class="chart-nav" align="right"><ul id="sales-stat-tab" ><li class="active"><a href="#month">compare</a></li></ul></div>
+													<div class="chart-nav" align="right"><ul><li class="active"><a href="compare.html">compare</a></li></ul></div>
 												</div>
 											</div>
 										</div>
@@ -557,6 +556,9 @@
 					</div>
 					
 				</div>
+				<!--<div class="col-md-4">
+									<button id="gritter-light" class="btn btn-lg btn-block btn-default btn-gritter" data-toggle="tooltip" data-original-title="light version">Light</button>
+				</div>-->
 			</div>
 			<!-- /main -->
 			<!-- FOOTER -->
@@ -619,6 +621,7 @@
 	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
 	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
+	<script src="assets/js/plugins/jquery-gritter/jquery.gritter.min.js"></script>
 </body>
 
 </html>
