--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,7 @@
 		<div class="top-bar navbar-fixed-top">
 			<div class="container">
 				<div class="clearfix">
+					<a href="#" class="pull-left toggle-sidebar-collapse"><i class="fa fa-bars"></i></a>
 					<!-- logo -->
 					<div class="pull-left left logo">
 						<a href="index.html"><img src="assets/img/header-mpass-hero.svg" alt="Social Budget" style="max-width: 159px;    max-height: 43px;" /></a>
@@ -373,7 +374,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<!-- WIDGET TASKS -->
 							<div id="widget-progress-bar" class="widget widget-scrolling">
 								<div class="widget-header">
@@ -381,7 +382,7 @@
 									<div class="btn-group widget-header-toolbar">
 										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
 										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
-										<a href="#" title="Remove" class="btn-borderless btn-remove"><i class="fa fa-times"></i></a>
+										<a href="settings.html" title="Settings" class="btn-borderless"><i class="fa fa-cog"></i></a>
 									</div>
 								</div>
 								<div class="widget-content">
@@ -422,12 +423,11 @@
 											</div>
 										</li>
 									</ul>
-									<button type="submit" class="btn btn-primary center-block" onclick="location.href='settings.html';">Manage Budgets</button>
 								</div>
 							</div>
 							<!-- END WIDGET TASKS -->
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<!-- WIDGET ACTIVITY FEED -->
 							<div class="widget widget-scrolling panel-group" id="accordion2">
 								<div class="widget-header">
@@ -505,7 +505,7 @@
 							</div>
 							<!-- END WIDGET ACTIVITY FEED -->
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<!-- WIDGET TASKS -->
 							<div class="widget">
 								<div class="widget-header">
@@ -539,16 +539,59 @@
 												<td>Auto</td>
 												<td><a href="#" id="tags" data-type="select2" data-pk="1" data-title="Enter tags">Music System</a></td>
 											</tr>
-											<tr>
-												<td>Home Furnishing</td>
-												<td>
-													<a href="#" id="country" data-type="select2" data-pk="1" data-value="BS" data-title="Select country"></a>
-												</td>
-											</tr>
 										</tbody>
 									</table>
-									<hr class="inner-separator" />
-									<button type="button" class="btn btn-primary center-block">Set wish lists</button>
+								</div>
+							</div>
+							<!-- END WIDGET TASKS -->
+						</div>
+						<div class="col-md-3">
+							<!-- WIDGET TASKS -->
+							<div class="widget widget-scrolling">
+								<div class="widget-header">
+									<h3><i class="fa fa-slack"></i> Chat</h3>
+									<div class="btn-group widget-header-toolbar">
+										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
+										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
+										<a href="#" title="Remove" class="btn-borderless btn-remove"><i class="fa fa-times"></i></a>
+									</div>
+								</div>
+								<div class="widget-content">
+									<div class="heading clearfix">
+										<div class="pull-left">
+											<p><i class="fa fa-circle green-font online-icon"></i> jamesh</p>
+										</div>
+									</div>
+									<ul class="list-unstyled slack-messages">
+										<li class="day-separator">
+											<span>September 20th</span>
+										</li>
+										<li>
+											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
+											<div class="text clearfix">
+												<span class="username">you</span><span class="timestamp">4:36 PM</span>
+												<p class="message">I can't find the suggested item online</p>
+											</div>
+										</li>
+										<li class="day-separator">
+											<span>Today</span>
+										</li>
+										<li>
+											<img src="assets/img/user2.png" alt="Avatar" class="img-circle pull-left avatar">
+											<div class="text clearfix">
+												<span class="username">bond</span><span class="timestamp">9:03 AM</span>
+												<p class="message">It's available only in-store at Fostercity</p>
+											</div>
+										</li>
+										<li>
+											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
+											<div class="text clearfix">
+												<span class="username">you</span><span class="timestamp">9:03 AM</span>
+												<p class="message">Thankyou</p>
+											</div>
+										</li>
+									</ul>
+									<textarea class="form-control textarea-chat" placeholder="Type a message" rows="1"></textarea>
 								</div>
 							</div>
 							<!-- END WIDGET TASKS -->
@@ -556,9 +599,6 @@
 					</div>
 					
 				</div>
-				<!--<div class="col-md-4">
-									<button id="gritter-light" class="btn btn-lg btn-block btn-default btn-gritter" data-toggle="tooltip" data-original-title="light version">Light</button>
-				</div>-->
 			</div>
 			<!-- /main -->
 			<!-- FOOTER -->
@@ -621,7 +661,6 @@
 	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
 	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
-	<script src="assets/js/plugins/jquery-gritter/jquery.gritter.min.js"></script>
 </body>
 
 </html>
