--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,6 @@
 		<div class="top-bar navbar-fixed-top">
 			<div class="container">
 				<div class="clearfix">
-					<a href="#" class="pull-left toggle-sidebar-collapse"><i class="fa fa-bars"></i></a>
 					<!-- logo -->
 					<div class="pull-left left logo">
 						<a href="index.html"><img src="assets/img/header-mpass-hero.svg" alt="Social Budget" style="max-width: 159px;    max-height: 43px;" /></a>
@@ -139,71 +138,19 @@
 									<li class="notification-item general">
 										<div class="btn-group">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-												<i class="fa fa-bell"></i><span class="count">8</span>
+												<i class="fa fa-bell"></i><span class="count">1</span>
 												<span class="circle"></span>
 											</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="notification-header">
-													<em>You have 8 notifications</em>
+													<em>You have 1 new notification(s)</em>
 												</li>
 												<li>
-													<a href="#">
-														<i class="fa fa-comment green-font"></i>
-														<span class="text">New comment on the blog post</span>
+													<a href="compare.html">
+														<i class="fa fa-shopping-cart red-font"></i>
+														<span class="text">Purchase at Target</span>
 														<span class="timestamp">1 minute ago</span>
 													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-user green-font"></i>
-														<span class="text">New registered user</span>
-														<span class="timestamp">12 minutes ago</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-comment green-font"></i>
-														<span class="text">New comment on the blog post</span>
-														<span class="timestamp">18 minutes ago</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-shopping-cart red-font"></i>
-														<span class="text">4 new sales order</span>
-														<span class="timestamp">4 hours ago</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-edit yellow-font"></i>
-														<span class="text">3 product reviews awaiting moderation</span>
-														<span class="timestamp">1 day ago</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-comment green-font"></i>
-														<span class="text">New comment on the blog post</span>
-														<span class="timestamp">3 days ago</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-comment green-font"></i>
-														<span class="text">New comment on the blog post</span>
-														<span class="timestamp">Oct 15</span>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-warning red-font"></i>
-														<span class="text red-font">Low disk space!</span>
-														<span class="timestamp">Oct 11</span>
-													</a>
-												</li>
-												<li class="notification-footer">
-													<a href="#">View All Notifications</a>
 												</li>
 											</ul>
 										</div>
@@ -661,6 +608,7 @@
 	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
 	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
+	<script src="assets/js/plugins/jquery-gritter/jquery.gritter.min.js"></script>
 </body>
 
 </html>
