Fix for Notification and Data issue.

--- a/WebContent/compare.html
+++ b/WebContent/compare.html
@@ -170,13 +170,12 @@
 	<!-- END WRAPPER -->
 
 	<!-- Javascript -->
-	<script type="text/javascript" src="assets/js/input.json"></script>
+<script type="text/javascript" src="assets/js/input.json"></script>
 	<script src="assets/js/jquery/jquery-2.1.0.min.js"></script>
 	<script src="assets/js/bootstrap/bootstrap.js"></script>
 	<script src="assets/js/plugins/modernizr/modernizr.js"></script>
 	<script src="assets/js/plugins/bootstrap-tour/bootstrap-tour.custom.js"></script>
-	<script
-		src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+	<script src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="assets/js/king-common.js"></script>
 	<script src="demo-style-switcher/assets/js/deliswitch.js"></script>
 	<script src="assets/js/plugins/stat/jquery.easypiechart.min.js"></script>
@@ -186,8 +185,7 @@
 	<script src="assets/js/plugins/stat/flot/jquery.flot.time.min.js"></script>
 	<script src="assets/js/plugins/stat/flot/jquery.flot.pie.min.js"></script>
 	<script src="assets/js/plugins/stat/flot/jquery.flot.tooltip.min.js"></script>
-	<script
-		src="assets/js/plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
+	<script src="assets/js/plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
 	<script src="assets/js/plugins/datatable/jquery.dataTables.min.js"></script>
 	<script src="assets/js/plugins/datatable/dataTables.bootstrap.js"></script>
 	<script src="assets/js/plugins/jquery-mapael/jquery.mapael.js"></script>
@@ -195,43 +193,34 @@
 	<script src="assets/js/king-chart-stat.js"></script>
 	<script src="assets/js/king-table.js"></script>
 	<script src="assets/js/king-components.js"></script>
-	<!-- ECharts -->
-	<script src="assets/js/echarts/dist/echarts.min.js"></script>
-	<!-- Custom Theme Scripts -->
-	<script src="assets/js/custom.min.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-progressbar/bootstrap-progressbar.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-switch/bootstrap-switch.min.js"></script>
-	<script
-		src="assets/js/plugins/jquery-maskedinput/jquery.masked-input.min.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-multiselect/bootstrap-multiselect.js"></script>
+    <!-- ECharts -->
+    <script src="assets/js/echarts/dist/echarts.min.js"></script>
+    <!-- Custom Theme Scripts -->
+    <script src="assets/js/custom.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-progressbar/bootstrap-progressbar.js"></script>
+	<script src="assets/js/plugins/bootstrap-switch/bootstrap-switch.min.js"></script>
+	<script src="assets/js/plugins/jquery-maskedinput/jquery.masked-input.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-multiselect/bootstrap-multiselect.js"></script>
 	<script src="assets/js/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="assets/js/plugins/jqallrangesliders/jqallrangesliders.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
-	<script
-		src="assets/js/plugins/jquery-simplecolorpicker/jquery.simplecolorpicker.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+	<script src="assets/js/plugins/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
+	<script src="assets/js/plugins/jquery-simplecolorpicker/jquery.simplecolorpicker.js"></script>
+	<script src="assets/js/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
+	<script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
 	<script src="assets/js/plugins/daterangepicker/daterangepicker.js"></script>
 	<script src="assets/js/plugins/moment/moment.min.js"></script>
 	<script src="assets/js/plugins/bootstrap-slider/bootstrap-slider.js"></script>
 	<script src="assets/js/plugins/select2/select2.min.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
 	<script src="assets/js/king-elements.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/address.custom.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/demo-mock.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-editable/bootstrap-editable.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/bootstrap-editable.min.js"></script>
 	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
 	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
-	<script
-		src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
+	<script src="assets/js/plugins/jquery-gritter/jquery.gritter.min.js"></script>
+	
 		<script src="assets/js/plugins/stat/flot/jquery.flot.orderBars.js"></script>	
 </body>
 
