--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 </head>
 
 
-<body class="sidebar-fixed topnav-fixed general-ui-elements forms-elements forms-inplace-editing">
+<body class="sidebar-fixed topnav-fixed general-ui-elements forms-inplace-editing">
 
 	<!-- WRAPPER -->
 	<div id="wrapper" class="wrapper">
@@ -473,18 +473,18 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Electronics</td>
-												<td><a href="#" id="tags" data-type="select2" data-pk="1" data-title="Enter tags">Television,Play Station</a></td>
+												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="EL" data-title="Select category"></a></td>
+												<td><a href="#" id="electronics" data-type="select2" data-pk="1" data-title="Enter tags">Television,Play Station</a></td>
 											</tr>
 											<tr>
-												<td>Sports</td>
+												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="SP" data-title="Select category"></a></td>
 												<td>
-													<a href="#" id="country" data-type="select2" data-pk="1" data-value="BS" data-title="Select country"></a>
+													<a href="#" id="sports" data-type="select2" data-pk="1" data-value="Rocket" data-title="Enter keywords"></a>
 												</td>
 											</tr>
 											<tr>
-												<td>Auto</td>
-												<td><a href="#" id="tags" data-type="select2" data-pk="1" data-title="Enter tags">Music System</a></td>
+												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="RS" data-title="Select category"></a></td>
+												<td><a href="#" id="addnew" data-type="select2" data-pk="1" data-title="Enter tags"></a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -587,27 +587,18 @@
     <!-- Custom Theme Scripts -->
     <script src="assets/js/custom.min.js"></script>
 	<script src="assets/js/plugins/bootstrap-progressbar/bootstrap-progressbar.js"></script>
-	<script src="assets/js/plugins/bootstrap-switch/bootstrap-switch.min.js"></script>
-	<script src="assets/js/plugins/jquery-maskedinput/jquery.masked-input.min.js"></script>
-	<script src="assets/js/plugins/bootstrap-multiselect/bootstrap-multiselect.js"></script>
-	<script src="assets/js/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
-	<script src="assets/js/plugins/jqallrangesliders/jqallrangesliders.js"></script>
-	<script src="assets/js/plugins/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
-	<script src="assets/js/plugins/jquery-simplecolorpicker/jquery.simplecolorpicker.js"></script>
-	<script src="assets/js/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
-	<script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-	<script src="assets/js/plugins/daterangepicker/daterangepicker.js"></script>
+	
+	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
 	<script src="assets/js/plugins/moment/moment.min.js"></script>
-	<script src="assets/js/plugins/bootstrap-slider/bootstrap-slider.js"></script>
-	<script src="assets/js/plugins/select2/select2.min.js"></script>
-	<script src="assets/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
-	<script src="assets/js/king-elements.js"></script>
-	<script src="assets/js/plugins/bootstrap-editable/address.custom.js"></script>
-	<script src="assets/js/plugins/bootstrap-editable/demo-mock.js"></script>
+	<script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
 	<script src="assets/js/plugins/bootstrap-editable/bootstrap-editable.min.js"></script>
 	<script src="assets/js/plugins/typeahead/typeahead.js"></script>
 	<script src="assets/js/plugins/typeahead/typeaheadjs.1.5.1.js"></script>
-	<script src="assets/js/plugins/bootstrap-editable/jquery.mockjax.min.js"></script>
+	<script src="assets/js/plugins/select2/select2.min.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/address.custom.js"></script>
+	<script src="assets/js/plugins/bootstrap-editable/demo-mock.js"></script>
+	
+	<script src="assets/js/king-elements.js"></script>
 	<script src="assets/js/plugins/jquery-gritter/jquery.gritter.min.js"></script>
 </body>
 
